Fix for issue with badge alignment in left and right nav

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -529,6 +529,14 @@ body {
       text-align: left;
     }
   }
+  .app-left-panel, .app-right-panel {
+    .nav li {
+      .badge {
+        right: 1em;
+        top: 1em;
+      }
+    }
+  }
   /*********************application right panel********************/
   .app-right-panel {
     height: 100%;
@@ -1399,11 +1407,6 @@ body {
     > .btn-caption, > .anchor-caption {
       display: block;
     }
-    .badge {
-      top: -10pt;
-      right: -10pt;
-      font-weight: normal;
-    }
   }
   /********for buttons, anchors with icon on right****/
   .btn[icon-position = "right"], a[icon-position = "right"] {
@@ -1411,8 +1414,9 @@ body {
   }
   /****Badge****/
   .btn .badge, a .badge {
-    right: -10px;
-    top: -10px;
+    right: -1em;
+    top: -1em;
+    font-weight: normal;
     &.btn-link {
       top: 0;
       right: 0;
